tests/invalid/Array_Invalid_2.whiley
method main() :
    int x = a2[0]
